@@ -16,7 +16,7 @@
  * along with this program; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  *
- * $Id: gtkgame.h,v 1.66 2003/07/16 10:34:07 thyssen Exp $
+ * $Id: gtkgame.h,v 1.67 2003/07/21 14:02:20 hb Exp $
  */
 
 #ifndef _GTKGAME_H_
@@ -128,7 +128,7 @@ extern void GTKMatchInfo( void );
 
 extern void SetEvaluation( gpointer *p, guint n, GtkWidget *pw );
 extern void SetRollouts( gpointer *p, guint n, GtkWidget *pw );
-extern void SetMET( gpointer *p, guint n, GtkWidget *pw );
+extern void SetMET( GtkWidget *pw, gpointer p );
 
 extern void HintMove( GtkWidget *pw, GtkWidget *pwMoves );
 
