@@ -1,3 +1,8 @@
+Mon Jul 21 15:59:43 2003  Holger Bochnig <hbgg@gmx.net>
+
+	* gtkgame.c gtkgame.h gtkmet.c: update filename of current MET
+	  in options after loading a new one
+
 Mon 20 Jul 13:30:41 GMT 2003 Jim Segrave <jes@jes-2.nl.demon.net>
 
 	* gtkgame.c - quick hackery changing some hboxes to vboxes
